[gd_scene load_steps=7 format=3 uid="uid://bsuv6scjti73j"]

[ext_resource type="PackedScene" uid="uid://eui7ynk8qylg" path="res://Scenes/Gold_display/gold_display.tscn" id="1_8dak6"]
[ext_resource type="Script" uid="uid://olivmg3a0ngl" path="res://Scenes/Shop/shop.gd" id="1_w8bjl"]
[ext_resource type="Resource" uid="uid://cfihuefg1m0o2" path="res://Data/Player/player_stats.tres" id="2_274ew"]
[ext_resource type="PackedScene" uid="uid://cmfrfmcum6ufj" path="res://Scenes/Item_Card/item_card.tscn" id="2_w8bjl"]
[ext_resource type="PackedScene" uid="uid://ba3mycns7o4qy" path="res://Scenes/Reroll_Buttom/reroll_button.tscn" id="3_274ew"]
[ext_resource type="Resource" uid="uid://csbl0xjlpdu53" path="res://Data/Items/knife.tres" id="5_rjc2l"]

[node name="Shop" type="VBoxContainer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -124.0
offset_top = 13.0
offset_right = -12.0
offset_bottom = 325.0
grow_horizontal = 0
theme_override_constants/separation = 12
script = ExtResource("1_w8bjl")
player_stats = ExtResource("2_274ew")

[node name="Top" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="GoldDisplay" parent="Top" instance=ExtResource("1_8dak6")]
layout_mode = 2

[node name="ShopCards" type="VBoxContainer" parent="Top"]
unique_name_in_owner = true
layout_mode = 2

[node name="ItemCard" parent="Top/ShopCards" instance=ExtResource("2_w8bjl")]
layout_mode = 2
item_stats = ExtResource("5_rjc2l")

[node name="ItemCard2" parent="Top/ShopCards" instance=ExtResource("2_w8bjl")]
layout_mode = 2
item_stats = ExtResource("5_rjc2l")

[node name="ItemCard3" parent="Top/ShopCards" instance=ExtResource("2_w8bjl")]
layout_mode = 2
item_stats = ExtResource("5_rjc2l")

[node name="ItemCard4" parent="Top/ShopCards" instance=ExtResource("2_w8bjl")]
layout_mode = 2
item_stats = ExtResource("5_rjc2l")

[node name="ItemCard5" parent="Top/ShopCards" instance=ExtResource("2_w8bjl")]
layout_mode = 2
item_stats = ExtResource("5_rjc2l")

[node name="Bottom" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 8

[node name="Reroll" type="VBoxContainer" parent="Bottom"]
layout_mode = 2
size_flags_horizontal = 8

[node name="RerollButton" parent="Bottom/Reroll" instance=ExtResource("3_274ew")]
layout_mode = 2
size_flags_horizontal = 8

[connection signal="pressed" from="Bottom/Reroll/RerollButton" to="." method="_on_reroll_button_pressed"]
